add_subdirectory(common)
add_subdirectory(config)
add_subdirectory(experiments)
add_subdirectory(factories)
add_subdirectory(loggers)
add_subdirectory(objectives)
add_subdirectory(obstacles)
if(PDT_OPEN_RAVE)
  add_subdirectory(open_rave)
endif()
add_subdirectory(pgftikz)
add_subdirectory(planning_contexts)
add_subdirectory(plotters)
add_subdirectory(reports)
add_subdirectory(spaces)
add_subdirectory(statistics)
add_subdirectory(time)
add_subdirectory(utilities)
add_subdirectory(visualization)